# SaultoMVP1

./: .env.example  .env.vault  .gitignore  .replit  CLAUDE.md  ETL.md  README.md  app.py  backup.sql  check_asana_neon.js  check_table_structure.py  debug_schema_discovery.py  debug_snowflake_schema.py  delete_all_asana_neon.js  explore_snowflake_data.py  list_all_snowflake_tables.py  main.py  metrics-data.json  models.py  package-lock.json  package.json  pyproject.toml  quick_start_connectors.py  replit.md  replit.nix  requirements_connectors.txt  requirements_simple_connectors.txt  routes.py  run-migrations.js  snowflake_diagnostic.py  snowflake_metrics_query.py  snowflake_query_service.py  snowflake_service.py  snowflake_simple_1750798391638.py  snowflake_simple_1750882609690.py  start_all_services.sh  start_connector_service.py  start_python_service.py  start_replit.sh  tailwind.config.ts  (+13 more)
.claude/: settings.local.json
attached_assets/: Pasted--Connecting-to-Snowflake-account-LFQSQQP-VBC22871-User-mpatrikios-Warehouse-SNOWFLAKE-LEA-1751730546736_1751730546737.txt  Pasted--Executing-Snowflake-query-SELECT-table-name-column-name-data-type-FROM-inform-1750797961230_1750797961231.txt  Pasted--Project-Structure-frontend-React-backend-Flask-Python--1748448329838.txt  Pasted--Query-executed-successfully-returned-603-rows-Dashboard-data-for-metric-Annual-Revenue-2024-01-0-1751732529764_1751732529764.txt  Pasted--Report-Only-Refused-to-execute-inline-script-because-it-violates-the-following-Content-Security-Po-1748657117789.txt  (+32 more)
client/: index.html
scripts/: smoke_monday.py  (+23 more)
(+192 files in other folders)
